--- a/learn-java-script/blackjack/index.css
+++ b/learn-java-script/blackjack/index.css
@@ -4,6 +4,10 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
     background-image: url(./images/table.jpg);   
+    text-align: center;
+    color: white;
+    background-size: cover;
+    font-weight: bold;
 }
 
 h1 {
@@ -11,5 +15,18 @@ h1 {
 }
 
 #message-el {
-    
+    font-weight: bold;
+    color: white;
+    font-style: italic;
+    font-size: 20px;
+}
+button {
+    color: #016f32;
+    width: 150px;
+    background: goldenrod;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: bold;
+    border: none;
+    border-radius: 2px;
 }
